mdmCeneveo/src/objects/Organization_Certificate__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Organization Certificates</relationshipLabel>
        <relationshipName>Organization_Certificates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Certificate_Effective_Date__c</fullName>
        <label>Certificate Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Certificate_Expiration_Date__c</fullName>
        <label>Certificate Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Organization_Certificate_Type__c</fullName>
        <label>Organization Certificate Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Organization Certificate</label>
    <nameField>
        <label>Organization_Certificate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Organization Certificates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>